# gilded-rose

./: CMakeLists.txt  README.md  main.cpp
include/: gilded_rose.h
